--- a/404.html
+++ b/404.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-404
 </head>
 <body>
 <br>
@@ -11,4 +10,19 @@
 <br>
 <br>
 <br>
-<p>Error 404 - Page not found if you really wanna know.</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p>it's an "Error 404 - Page not found", if you really wanna know.</p>
