--- a/404.html
+++ b/404.html
@@ -6,7 +6,8 @@
 <br>
 <br>
 <br>
-<h3>This is not the page you are looking for.</h3>
+<h3>This is not the page you were looking for.</h3>
+<p>(Except if you were looking for the 404 page, in which case, you marvellously succeeded!)</p>
 <br>
 <br>
 <br>
