--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>RIK IS ███</h1>
+<h1>RIK IS heel aardig en super pro</h1>
+<br>
+<br>
+<br>
+<br>
+<p>yolo</p>
 </body>
 </html>
