marvellous is shitword

--- a/404.html
+++ b/404.html
@@ -7,7 +7,8 @@
 <br>
 <br>
 <h3>This is not the page you were looking for.</h3>
-<p>(Except if you were looking for the 404 page, in which case, you marvellously succeeded!)</p>
+<br>
+<p>(Except if you were looking for the 404 page, in which case, you succeeded!)</p>
 <br>
 <br>
 <br>
@@ -26,4 +27,4 @@
 <br>
 <br>
 <br>
-<p>it's an "Error 404 - Page not found", if you really wanna know.</p>
+<p>"Error 404 - Page not found"</p>
