--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>F***!!! 404!!!</title>
 </head>
 <body>
 <br>
@@ -17,7 +18,7 @@
 <br>
 <br>
 <br>
-<br>
+<p>I'll never tell you the server OS! I don't even know it!</p>
 <br>
 <br>
 <br>
