--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>RIK IS heel aardig en super pro</h1>
-<br>
-<br>
-<br>
-<br>
-<p>yolo</p>
+<h1>Hello, World!</h1>
 </body>
 </html>
